# Soryn-Manager-Updates

./: .gitattributes  AUTO_UPDATE_SETUP.md  SECURE_LICENSE_STORAGE.md  SECURITY_UPGRADE.md  audioController.js  create-icon.js  create-installer.bat  index.js  install-dependencies.bat  installer.bat  license.key  obfuscate.js  package-lock.json  package.json  server.js  setup-security.js  test-security.js  ~install-dependencies.CAB
backend/: .env  .env.template  DEPLOYMENT.md  README.md  env.example  package.json  server.js  test.js
backend/payloads/: payload.enc
loader/: CMakeLists.txt  CONFIGURATION.md  PRODUCTION-DEPLOYMENT.md  README.md  SecurityUtils.cpp  SorynLoader.cpp  build-dev.bat  build.bat  test-keyauth-validation.ps1  test-loader.cpp  test-security.ps1  validate-loader.cpp
src/: Login.js  authClient.js  config.js  login.html
src/main/: betterxcloudpreload.js  controlBarPreload.js  fullscreenSpoofer.js  localstoragepreload.js  macro.js  main.js  mainViewWindow.js  preload.js  script.js  selectionWindow.js  syncPanelPreload.js  viewPreload.js
src/main/preload/: macroPanelPreload.js  syncPanelPreload.js  viewControlBarPreload.js
src/renderer/: about.html  controlbarMultiplayer.html  controlbarWarzone.html  macroPanel.html  main.html  selection.html  settings.html  syncPanel.html  viewControlBar.html
src/renderer/css/: login.css  main.css  selection.css
src/renderer/js/: main.js  selection.js
